[project]
name = "fly-plot"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crossfiledialog>=1.0.0",
    "opencv-contrib-python>=4.12.0.88",
    "pywin32>=311 ; sys_platform == 'win32'",
    "scikit-image>=0.25.2",
    "tifffile>=2025.8.28",
    "toml>=0.10.2",
]
