[project]
name = "fly-plot"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "filedialpy>=1.3.3",
    "opencv-contrib-python>=4.12.0.88",
    "pywin32>=311 ; sys_platform == 'win32'",
    "scikit-image>=0.25.2",
    "tifffile>=2025.8.28",
    "toml>=0.10.2",
]

[tool.uv.sources]
filedialpy = { git = "https://github.com/Cdmium/filedialpy.git" }
